--- a/Asset/css/main.css
+++ b/Asset/css/main.css
@@ -1,12 +1,12 @@
 body {
   padding: 0;
   margin: 0;
-  background-image: url(/Asset/images/background.jpg);
+  background-image: url("../images/background.jpg");
   background-size: cover;
 }
 
 .nav {
-  background-color: #1A237E;
+  background-color: #1a237e;
   display: flex;
   align-items: center;
 }
@@ -44,7 +44,7 @@ body {
 }
 .admin_content .top {
   padding: 10px;
-  background-color: #1A237E;
+  background-color: #1a237e;
   border-radius: 30px 30px 0px 0px;
 }
 .admin_content .top .btn-open-popup {
@@ -54,13 +54,14 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 5px;
 }
 .admin_content .tieude {
   border-bottom: 1pt solid black;
+  text-align: center;
 }
 .admin_content .tieude th {
   padding: 10px;
@@ -68,7 +69,7 @@ body {
 }
 .admin_content .form-input {
   padding: 10px;
-  margin-bottom: 20px;
+  margin-top: 15px;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 16px;
@@ -123,4 +124,15 @@ body {
   margin: 0 auto;
   color: white;
   text-align: center;
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
+
+.sp-thongbao {
+  color: red;
+  margin-left: 2px;
+  display: none;
+}
+.htmlTd {
+  border: 1px solid #000;
+  text-align: center;
+  margin-bottom: 10px;
+}
