--- a/Asset/css/main.css
+++ b/Asset/css/main.css
@@ -19,6 +19,10 @@ body {
   border-radius: 5px;
 }
 
+#tblDanhSachSP td {
+  border: 1px solid #000;
+  text-align: center;
+}
 #tblDanhSachSP td button {
   width: 100px;
 }
@@ -44,7 +48,7 @@ body {
   }
 }
 .nav {
-  background-color: #1A237E;
+  background-color: #1a237e;
   display: flex;
   align-items: center;
 }
@@ -143,13 +147,14 @@ body {
 }
 .admin_content .top {
   padding: 10px;
-  background-color: #1A237E;
+  background-color: #1a237e;
   border-radius: 30px 30px 0px 0px;
 }
 .admin_content .tieude {
   border-bottom: 1pt solid black;
 }
 .admin_content .tieude th {
+  text-align: center;
   padding: 10px;
   font-size: 1.1rem;
 }
@@ -219,4 +224,4 @@ body {
   .modal-body table td {
     padding: 4px;
   }
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
