--- a/Asset/css/main.css
+++ b/Asset/css/main.css
@@ -140,7 +140,10 @@ body {
   color: white;
   text-align: center;
 }
-
+.sp-thongbao {
+  color: red;
+  margin-bottom: 10px;
+}
 .admin_content {
   padding: 100px 50px;
   background-color: white;
@@ -165,7 +168,7 @@ body {
 }
 .admin_content .form-input {
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 16px;
